@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-11T01:39:50Z",
-  "count_outdated" : 8265,
-  "uniques_outdated" : 3701,
+  "timestamp" : "2024-09-12T12:40:43Z",
+  "count_outdated" : 8269,
+  "uniques_outdated" : 3705,
   "count" : 8299,
   "uniques" : 3733,
   "clones" : [
-    {
-      "timestamp": "2024-08-29T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 3, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 4,
-      "uniques_minmax": [ 3, 4 ],
-      "uniques_decinc": [ 0, 4 ]
-    },
     {
       "timestamp": "2024-08-30T00:00:00Z",
       "count": 1,
