@@ -1,12 +1,7 @@
 {
-  "count": 34,
-  "uniques": 27,
+  "count": 30,
+  "uniques": 23,
   "clones": [
-    {
-      "timestamp": "2024-08-29T00:00:00Z",
-      "count": 4,
-      "uniques": 4
-    },
     {
       "timestamp": "2024-08-30T00:00:00Z",
       "count": 1,
