@@ -1,3 +1,12 @@
+2024-09-12T12:40:43Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10831007096 # 525
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-12
+* notice: last 14d: unq all: 23 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 3701 8265 / 3733 8299
+* notice: next accum: outdated-unq outdated-all / unq all: 3705 8269 / 3733 8299
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-08-29] / []
+
 2024-09-11T01:39:50Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10803449143 # 522
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-11
